<resources>
    <!--A estrutura dos nomes das variaveis de strings deve ser a seguinte:
        string + nome ou sigla da activity + elemento origem + nome
        Exemplo: string_login_edittext_user

        Também deve-se separar as strings com comentarios referenciando a pagina de origem
    -->

    <string name="app_name">RocketService</string>

    <!-- activity_singup -->
    <string name="string_singup_textview_titulo">Vamos Começar</string>
    <string name="string_singup_textview_add_info">Preencha algumas informações para se cadastrar</string>
    <string name="string_singup_edittext_nomecompleto">* Nome Completo</string>
    <string name="string_singup_edittext_email">* E-mail</string>
    <string name="string_singup_edittext_documento">* Documento(RG/CPF)</string>
    <string name="string_singup_edittext_datanasc">* Data De Nascimento</string>
    <string name="string_singup_edittext_usuario">* Usuário</string>
    <string name="string_singup_edittext_senha">* Senha</string>
    <string name="string_singup_edittext_confirmar_senha">* Confirmar senha</string>
    <string name="string_singup_edittext_telefone_celular">* Telefone celular</string>
    <string name="string_singup_btn_cadastrar">CADASTRAR</string>
    <string name="string_singup_textview_ja_possui_uma_conta">Já possui uma conta?</string>
    <string name="string_singup_textview_entrar">Entrar</string>

    <!-- activity_home -->
    <string name="string_home_textview_ola_nome_de_usuario">Ola, nome de usuario</string>
    <string name="string_home_textview_o_que_voce_esta_precisando">O que você está precisando?</string>
    <string name="string_home_edittext_procure_por_profissionais_ou_servicos">procure por profissionais ou serviços</string>
    <string name="string_home_btn_tencologia">tencologia</string>
    <string name="string_home_btn_educacao">Educação</string>
    <string name="string_home_btn_casa">Casa</string>
    <string name="string_home_btn_arte">Arte</string>
    <string name="string_home_btn_evento">evento</string>
    <string name="string_home_btn_saude">saúde</string>

    <!-- activity_login -->
    <string name="string_login_textview_title">Rocket Service</string>
    <string name="string_login_textview_subtitle">Encontre um profissional mais rápido que um foguete</string>
    <string name="string_login_edittext_hint_user">* Usuário</string>
    <string name="string_login_edittext_hint_senha">* Senha</string>
    <string name="string_login_btn_entrar">Entrar</string>
    <string name="lembre_de_mim">Lembrar de mim</string>


    <!-- activity_update_password -->
    <string name="string_updatepssw_edittext_senha_atual">* Senha Atual</string>
    <string name="string_updatepssw_edittext_nova_senha">* Nova Senha</string>
    <string name="string_updatepssw_edittext_confirmar_nova_senha">* Confirmar nova senha</string>
    <string name="string_updatepssw_btn_salvar">Salvar</string>

    <!-- activity_menu -->
    <string name="string_menu_textview_nomeUser">Nome usuario</string>
    <string name="string_menu_textview_perfil">Perfil</string>
    <string name="string_menu_textview_paginainicial">Pagina inicial</string>
    <string name="string_menu_textview_servicoscontratados">Serviços contratados</string>
    <string name="string_menu_textview_servicosoferecidos">Serviços oferecidos</string>
    <string name="string_menu_textview_servicossolicitados">Serviços solicitados para você</string>
    <string name="string_menu_textview_servicosfavoritos">Serviços favoritos</string>
    <string name="string_menu_textview_alterarsenha">Alterar senha</string>
    <string name="string_menu_textview_sair">Sair</string>

    <!-- activity_edit_service -->
    <string name="string_editservice_edittext_nomeservico">* Nome serviço</string>
    <string name="string_editservice_textview_categoria">* Categoria</string>
    <string name="string_editservice_edittext_mediapreco">* Média de preço por hora / dia</string>
    <string name="string_editservice_edittext_formasPagamento">* Formas de pagamento aceitas</string>
    <string name="string_editservice_edittext_formaExecucao">* Forma execução</string>
    <string name="string_editservice_textview_textInfo">* Informações adicionais</string>
    <string name="string_editservice_btn_salvar">Salvar</string>

    <!-- LIST VIEW      CONSERTAR -->
    <string name="string_listView_titlo">titulo</string>
    <string name="string_listView_cost">preço</string>
    <string name="string_listViewSolicited_name">nome</string>
    <string name="string_listViewSolicited_Date">data</string>

    <!-- activity_service_rating -->
    <string name="string_servicerating_textview_titulo">DADOS DO SERVIÇO SELECIONADO</string>
    <string name="string_servicerating_textview_nota">* Nota</string>
    <string name="string_servicerating_textview_comentario">* Comentários</string>
    <string name="string_servicerating_btn_confirmar">Confirmar</string>

    <!-- activity_service_cancellation -->
    <string name="string_servicecancellation_textview_titulo">DADOS DO SERVIÇO SELECIONADO</string>
    <string name="string_servicecancellation_textview_informe">* Informe o motivo do cancelamento</string>
    <string name="string_servicecancellation_btn_cancelar">Cancelar</string>

    <!-- activity_service_description -->
    <string name="string_servicedescription_textview_servico">Servico</string>
    <string name="string_servicedescription_textview_nomeprof">Nome do profissional</string>
    <string name="string_servicedescription_textview_nomeprofdesc">Nome</string>
    <string name="string_servicedescription_textview_contact">Contato</string>
    <string name="string_servicedescription_textview_telefone">Telefone</string>
    <string name="string_servicedescription_textview_email">E-mail</string>
    <string name="string_servicedescription_textview_mediapreco">Média de preço por hora/dia</string>
    <string name="string_servicedescription_textview_descmediapreco">R$ 0,00</string>
    <string name="string_servicedescription_textview_formaspag">Formas de pagamento aceitas</string>
    <string name="string_servicedescription_textview_formaspagdesc">Formas aceitas descrição</string>
    <string name="string_servicedescription_textview_formaexecucao">Formas de execução</string>
    <string name="string_servicedescription_textview_formaexecucaodesc">Formas de execução descrição</string>
    <string name="string_servicedescription_textview_informacaoadicional">Informação adcional</string>
    <string name="string_servicedescription_textview_informacaoadicionaldesc">Informação adcional descrição</string>
    <string name="string_servicedescription_btn_contratar">Contratar</string>

    <!-- activity_add_service -->
    <string name="string_addservice_edittext_nomeservico">Nome do serviço</string>
    <string name="string_addservice_textview_categoria">Categoria</string>
    <string name="string_addservice_edittext_mediapreco">Média de preço por hora/dia</string>
    <string name="string_addservice_edittext_formapag">Formas de pagamento aceitas</string>
    <string name="string_addservice_edittext_formaexecucao">Formas de execucao</string>
    <string name="string_addservice_edittext_informacaoadicional">Informações adicionais</string>
    <string name="string_addservice_btn_salvar">SALVAR</string>
    <string name="string_toolbar_editservice_title">Editar serviços</string>

    <!-- list view -->
    <string name="string_solicitadForYou_desciption">descrição do serviço</string>

    <!-- Service Solicitation -->
    <string name="String_service_solicitation_infoAdd">* Informação Adcional</string>
    <string name="string_service_solicitation_finalizar">finalizar</string>
    <string name="string_service_solicitation_title">Dados do serviço selecionado</string>

    <!-- Edit Service-->
    <string name="string_edit_profile_endereco">* Endereço</string>
    <string name="string_edit_profile_city">* Cidade</string>
    <string name="string_edit_profile_estaty">* Estado</string>

    <!--Error mensagens-->
    <string name="string_campos_vazios"> Prencha todos os campos </string>
    <string name="string_Status">status</string>

    <!--SimpleArray-->
    <string-array name="categoria_array">
        <item>Tecnologia</item>
        <item>Educação</item>
        <item>Casa</item>
        <item>Arte</item>
        <item>Evento</item>
        <item>Saúde</item>
    </string-array>

    <!-- Array com os estados do Brasil -->
    <string-array name="estados_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

</resources>

