<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UpdatePasswordActivity">



    <EditText
        android:id="@+id/edittext_senhaAtual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/string_updatepssw_edittext_senha_atual"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edittext_novaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/string_updatepssw_edittext_nova_senha"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_senhaAtual" />

    <EditText
        android:id="@+id/edittext_confirmarNovaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/string_updatepssw_edittext_confirmar_nova_senha"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_novaSenha" />

    <Button
        android:id="@+id/btn_alterarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:backgroundTint="@color/rocket_service_main_blue"
        android:text="@string/string_updatepssw_btn_salvar"
        android:textColor="@color/white"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>